syntax = "proto3";

enum Type {
  WORKER = 0;
  MANAGER = 1;
} 

message Peer {
  bytes publicKey = 1;
  Type type = 2;
  repeated bytes addrs = 3;
}
